<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login"
    android:background="@color/white"

    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background2"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/loginlogo"
        android:padding="8dp"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/logo4" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/login1"
        android:textAlignment="viewEnd"
        android:textSize="48sp"
        android:textStyle="bold"
        android:background="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="407dp"
        android:layout_height="418dp"
        android:background="@color/cardview_light_background"
        android:elevation="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.938">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:layout_margin="15dp"
                >

                <AutoCompleteTextView
                    android:id="@+id/roleSelection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/background2"
                    android:layout_margin="15dp"
                    android:inputType="none"
                    android:padding="10dp"
                    android:text="@string/login_as" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="12dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/LoginEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="kiptoo@gmail.com"
                android:background="@drawable/bottom_bg"
                android:ems="10"
                android:hint="@string/kiptoo_gmail_com"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="-121dp"
                tools:layout_editor_absoluteY="240dp" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="**"
                android:background="@drawable/bottom_bg"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="282dp"
                android:layout_height="67dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="45dp"
                android:backgroundTint="@color/black"
                android:text="@string/login"
                android:textColorLink="@color/red" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext_background"
                android:text="Forgot Password?"
                android:textAlignment="center"
                android:textStyle="bold|normal" />

            <TextView
                android:id="@+id/signupoption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext_background"
                android:text="Dont have an account ? Sign Up"
                android:textAlignment="center"
                android:textStyle="bold|normal" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
