<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutUsActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="About Us"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold|normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/background2"
            android:elevation="35dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_brief_but_rich_history2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kenyaredcrossistory"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:background="@drawable/background2"
            android:elevation="35dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Our Vision"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/our_vision2"
                android:textSize="20sp"
                android:textAlignment="center"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:background="@drawable/background2"
            android:elevation="35dp"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Our Mision"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/our_mision"
                android:textSize="18sp"
                android:textAlignment="center"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:background="@drawable/background2"
            android:elevation="35dp"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Our Core Values"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/core_values"
                android:textSize="18sp"
                android:textAlignment="center"/>


        </LinearLayout>


    </LinearLayout>

</ScrollView>