<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContactUsActivity"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background2"
            android:text="@string/contact_us22"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SEND US A MESSAGE"
            android:layout_marginLeft="105dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/red2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Full Name"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginLeft="55dp"
            android:textSize="18sp"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/contactFullName"
            android:inputType="textPersonName"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:hint="Full Name"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textAppearance="@color/black"
            android:background="@drawable/edittext_bg2"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginLeft="55dp"
            android:textSize="18sp"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/contactPhoneNumber"
            android:inputType="phone"
            android:hint="0795310625"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textAppearance="@color/black"
            android:background="@drawable/edittext_bg2"
            android:visibility="gone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email Address"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginLeft="55dp"
            android:textSize="18sp"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/contactEmail"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="55dp"
            android:hint="kiptoo@gmail.com"
            android:layout_marginTop="12dp"
            android:layout_marginRight="55dp"
            android:textSize="18sp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textAppearance="@color/black"
            android:background="@drawable/edittext_bg2"
            android:visibility="gone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Message"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginLeft="55dp"
            android:textSize="18sp"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/contactMessage"
            android:inputType="text"
            android:hint="write here........"
            android:textColorHint="@color/black"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="55dp"
            android:textSize="18sp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textAppearance="@color/black"
            android:background="@drawable/edittext_bg2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SEND"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="12dp"
            android:id="@+id/contactSendMessage"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CONTACT DETAILS"
            android:textColor="@color/red2"
            android:layout_marginLeft="105dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:elevation="65dp"
            android:layout_gravity="center|center_vertical"
            android:background="@drawable/background2"
            android:backgroundTint="@color/white">


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:contentDescription="@string/none"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_us_mail"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_redcross_or_ke"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/communications_redcross_or_ke"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/background2"
            android:backgroundTint="@color/white"
            android:elevation="65dp"
            android:layout_gravity="center|center_vertical">


            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:contentDescription="@string/none"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/phone_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_us_anytime"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_254_703_037_000"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toll_free_1199"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/background2"
            android:backgroundTint="@color/white"
            android:elevation="65dp"
            android:layout_gravity="center|center_vertical">


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:contentDescription="@string/none"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/baseline_location_pin_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visit_our_offices"
                    android:textSize="18sp"

                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/south_c_bellevue_red_cross_road_n_off_popo_nairobi_kenya"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>